--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.example</groupId>
-    <artifactId>Finktest</artifactId>
+    <groupId>com.aikosolar.data</groupId>
+    <artifactId>df-extract-run-count-etl</artifactId>
     <version>1.2</version>
 <!--    <parent>-->
 <!--        <groupId>org.springframework.boot</groupId>-->
