--- a/df-extract-run-count-etl/pom.xml
+++ b/df-extract-run-count-etl/pom.xml
@@ -182,6 +182,18 @@
       <version>1.10.19</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.apache.hbase</groupId>
+          <artifactId>hbase-common</artifactId>
+          <version>2.0.0</version>
+          <scope>compile</scope>
+      </dependency>
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-client</artifactId>
+      <version>2.0.0</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
