发送给kafka完成

--- a/df-extract-run-count-etl/src/main/resources/application.properties
+++ b/df-extract-run-count-etl/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-#
+# job name
+# df提取run count etl程序
+job.name=df-extract-run-count-etl
+
 #FlinkUtils配置
 bootstrap.servers=172.16.111.20:9092,172.16.111.21:9092,172.16.111.22:9092
 # ZooKeeper集群地址
@@ -10,6 +13,9 @@ etl.source.topic=data-collection-df-test
 etl.source.group.id=df_test__2
 etl.source.auto.commit.interval.ms=5000
 etl.source.auto.offset.reset=earliest
+
+# etl清洗之后发送下一站
+etl.target.topic=etl-df-boat-enter-tube
 
 # 消费组ID
 group.id="Fink_halm_yw"
