--- a/df-extract-run-count-etl/src/main/resources/application.properties
+++ b/df-extract-run-count-etl/src/main/resources/application.properties
@@ -10,12 +10,12 @@ zookeeper.connect=172.16.111.20:2181,172.16.111.21:2181,172.16.111.22:2181
 # Kafka Topic名称
 #etl.source.topic=data-collection-df-test
 etl.source.topic=data-collection-df-test
-etl.source.group.id=df_test__2
+etl.source.group.id=df_test_sxw_prod25
 etl.source.auto.commit.interval.ms=5000
 etl.source.auto.offset.reset=earliest
 
 # etl清洗之后发送下一站
-etl.target.topic=etl-df-boat-enter-tube
+etl.target.topic=etl-df-boat-enter-tube1
 
 # 消费组ID
 group.id="Fink_halm_yw"
