--- a/df-extract-run-count-etl/pom.xml
+++ b/df-extract-run-count-etl/pom.xml
@@ -194,6 +194,11 @@
       <version>2.0.0</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>net.sourceforge.javacsv</groupId>
+      <artifactId>javacsv</artifactId>
+      <version>2.0</version>
+    </dependency>
   </dependencies>
 
   <build>
