--- a/df-extract-run-count-etl/pom.xml
+++ b/df-extract-run-count-etl/pom.xml
@@ -199,6 +199,12 @@
       <artifactId>javacsv</artifactId>
       <version>2.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>3.2.4</version>
+    </dependency>
   </dependencies>
 
   <build>
