--- a/df-extract-run-count-etl/src/main/resources/application.properties
+++ b/df-extract-run-count-etl/src/main/resources/application.properties
@@ -10,7 +10,7 @@ zookeeper.connect=172.16.111.20:2181,172.16.111.21:2181,172.16.111.22:2181
 # Kafka Topic名称
 #etl.source.topic=data-collection-df-test
 etl.source.topic=data-collection-df-test
-etl.source.group.id=df_test_sxw_prod41
+etl.source.group.id=df_test_sxw_prod44
 etl.source.auto.commit.interval.ms=5000
 etl.source.auto.offset.reset=earliest
 
@@ -41,27 +41,14 @@ connection.password="123456"
 #查询Sql
 sql="select Eqpid,st from halm"
 
-
-
-#
 #写入Hbase的配置
-#
 #Hbase表名
-tablenamestr="YW_DATA_HALM_TEST_day"
-tablenamestrday="YW_DATA_HALM_day"
-tablenamestryear="YW_DATA_HALM_taojie"
+hbase.table="YW_DATA_DF_sxw"
+# 列族名
+hbase.column.family1="main"
+hbase.column.family2="info"
 
-#列族名
-columnfamilyname="halm"
-
-
-
-#
 #任务名
-#
-
-
-#
 #设备价值效率ST
 #
 #广州基地
